Add feature for admin to edit internet trouble
